--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,15 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
 
-      - uses: actions/setup-node@v1
+      - name: "Setup node"
+        uses: actions/setup-node@v4
         with:
-          node-version: ">=14"
-          check-latest: true
+          node-version: "lts/*"
+          #cache: "npm"
 
       - name: Install Salesforce CLI + Scanner
         run: |
@@ -29,6 +30,7 @@ jobs:
           sf plugins install @salesforce/sfdx-scanner
 
       - name: Run SFDX Scanner - Report findings as comments
+        if: github.event_name == 'pull_request'
         uses: mitchspano/sfdx-scan-pull-request@v0.1.16
         with:
           severity-threshold: 4
@@ -37,6 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Authenticate into DevHub
+        id: authenticate
         run: |
           echo "${SALESFORCE_JWT_SECRET_KEY}" > server.key
           sf org login jwt --client-id ${{ secrets.SALESFORCE_CONSUMER_KEY }} --jwt-key-file server.key --username ${{ secrets.SALESFORCE_DEVHUB_USERNAME}} --set-default-dev-hub --alias devhub
